Added Title and Background

--- a/Site.html
+++ b/Site.html
@@ -1,5 +1,12 @@
 <html>
 <head>
+<title>Левченко Н. , Воронцов А.  Guns'N'Roses Лабораторная работа</title>
+  <style>
+   body {
+    background: #333; /* Цвет фона */
+    color: #fc0; /* Цвет текста */
+   }
+  </style>
 </head>
 <body>
 </body>
