Added logo and href

--- a/Site.html
+++ b/Site.html
@@ -3,11 +3,12 @@
 <title>Левченко Н. , Воронцов А.  Guns'N'Roses Лабораторная работа</title>
   <style>
    body {
-    background: #333; /* Цвет фона */
-    color: #fc0; /* Цвет текста */
-   }
-  </style>
+    background: #000;
+    font-size: 40pt;
+       }  </style>
 </head>
-<body>
+<body link="white">
+  <p align="center" ><img src="logo.jpg" align="middle" vspace="40"  ></p>
+  <p align="center" > <a href="classic.html"> <i>Классический состав</i></a></p>
 </body>
 </html>
