--- a/first.html
+++ b/first.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>Первый состав группы Guns N’ Roses</title>
+<meta charset="utf-8">
 <style>
 body {
 background: #444;
@@ -9,6 +11,17 @@ color: #fc0;
 </style>
 </head>
 <body>
+<p><img src="BryanMantia.jpg" alt="фото Bryan Mantia" ></p> 
+
+<p><img src="buckethead.jpg" alt="фото buckethead" ></p>
+
+<p><img src="GilbyClarke.jpg" alt="фото GilbyClarke" ></p>
+
+<p><img src="JoshFreese.jpg" alt="фото JoshFreese" ></p>
+
+<p><img src="MatthewSorum.jpg" alt="фото MatthewSorum" ></p>
+
+<p><img src="RobinFinck.jpg" alt="фото RobinFinck" ></p>
 
 </body>
 </html>
