--- a/first.html
+++ b/first.html
@@ -1,27 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Первый состав группы Guns N’ Roses</title>
-<meta charset="utf-8">
-<style>
-body {
-background: #444;
-color: #fc0;
-}
-</style>
-</head>
+	<head>
+	<title>Первый состав группы Guns N’ Roses</title>
+	<meta charset="utf-8">
+	<style>
+		body {
+		background: #444;
+		color: #fc0;
+		}
+	</style>
+	</head>
 <body>
-<p><img src="BryanMantia.jpg" alt="фото Bryan Mantia" ></p> 
-
-<p><img src="buckethead.jpg" alt="фото buckethead" ></p>
-
-<p><img src="GilbyClarke.jpg" alt="фото GilbyClarke" ></p>
-
-<p><img src="JoshFreese.jpg" alt="фото JoshFreese" ></p>
-
-<p><img src="MatthewSorum.jpg" alt="фото MatthewSorum" ></p>
-
-<p><img src="RobinFinck.jpg" alt="фото RobinFinck" ></p>
-
+	<p><img src="BryanMantia.jpg" alt="фото Bryan Mantia" hspace="5" vspace="7" align="left"> 
+	Bryan "Brain" Mantia(родился 4 февраля 1963 в Купертино, штат Калифорния) представляет собой <br/>
+	современного рок барабанщика. Он играл с такими группами, как Primus, Guns N 'Roses, Praxis, <br/>
+	и Godflesh, и с другими популярными исполнителями, такими как Том Уэйтс, Серж Танкян, Билл Laswell, <br/>
+	Бутси Коллинз, и Buckethead. Он также работал с многочисленными артистами и группами. </p>
+	<br clear="both"/> 
+	
+	<p><img src="GilbyClarke.jpg" alt="фото GilbyClarke"  
+	hspace="5" vspace="7" alt="" align="left">
+	Гилберт "Гилби" Кларк (англ. Gilbert "Gilby" Clarke; 17 августа 1962, Кливленд) - американский <br/>
+	гитарист и продюсер, наиболее известный по трехлетнему пребыванию в составе рок-группы Guns N' Roses <br/>
+	в качестве ритм-гитариста, заменив Иззи Стрэдлина в 1991 году во время тура Use Your Illusion. <br/>
+	После ухода из группы Кларк продолжил заниматься сольной карьерой и играл на гитаре <br/>
+	у таких исполнителей, как Slash's Snakepit, Heart, Нэнси Синатра, Кэти Валентайн (из Go-Go's), <br/>
+	MC5 и в сформированной им группе Rock Star Supernova с членами Metallica и Mötley Crüe. <br/>
+	Продюсерская деятельность Кларка включает в себя альбомы групп: L.A. Guns, Bullets and Octane, <br/>
+	The Bronx и Vains of Jenna.</p> 
+	<br clear="both"/>
+	
+	<p><img src="JoshFreese.jpg" alt="фото JoshFreese" 
+	hspace="5" vspace="7" alt="" align="left">
+	Родился в музыкальной семье (отец руководил Оркестром Диснейленда, а мать была классической пианисткой).<br/>
+	В шестимесячном возрасте оказался на юге Калифорнии.<br/>
+	В возрасте 7-8 лет начал играть на ударных инструментах.<br/>
+	В 12 лет начал профессиональную карьеру (в Оркестре Top 40 Диснейленда).<br/>
+	В 15 лет начал участвовать в турне и записываться.</p>
+	<br clear="both"/>
+	
+	<p><img src="MatthewSorum.jpg" alt="фото MatthewSorum" 
+	hspace="5" vspace="7" alt="" align="left">
+	Мэтью Уильям Сорум (Matthew William Sorum, 19.11.1960) – американский барабанщик и перкуссионист. <br/>
+	Играет преимущественно в стиле хард-рок. Наиболее известен семилетним опытом игры <br/>
+	в группе 'Guns N' Roses'; на данный момент играет на барабанах в составе супергруппы 'Velvet Revolver', <br/>
+	вместе со старыми коллегами по 'Gun's N' Roses' - басистом Даффом МакКаганом и гитаристом Слэшем. <br/>
+	Родился Сорум в Мишшн-Вьеджо, Калифорния. Родители его были английского и норвежского происхождения. <br/>
+	В процессе обучения в старших классах Сорум стал частью местного оркестра – его барабанной секции. <br/>
+	В 1975-ом он вплотную занялся музыкой и вскоре стал известен в окрестностях как достаточно <br/>
+	модный музыкант. </p>
+	<br clear="both"/>
+	
+	<p><img src="RobinFinck.jpg" alt="фото RobinFinck" 
+	hspace="5" vspace="7" alt="" align="left">
+	Робин Финк – известный американский гитарист, выступавший с Nine Inch Nails в Self Destruct-туре <br/>
+	и Fragility-туре. В настоящее время Робин является гитаристом американской хард-рок группы Guns N' Roses. <br/>
+	Он также один из немногих музыкантов, игравших в двух разных группах, которые попали в список Ста Величайших Хард-рок Артистов, <br/>
+	составленный телеканалом VH1. Nine Inch Nails в этом списке присвоен #43, а Guns N' Roses – #9. <br/>
+	Робин родился и вырос в Мариетте, штат Джорджия. Он играл в нескольких малоизвестных группах в Атланте. </p>
+	<br clear="both"/>
+	
 </body>
 </html>
