Changed color in Site

--- a/Site.html
+++ b/Site.html
@@ -3,12 +3,12 @@
 <title>Левченко Н. , Воронцов А.  Guns'N'Roses Лабораторная работа</title>
   <style>
    body {
-    background: #000;
+    background: #444;
     font-size: 40pt;
        }  </style>
 </head>
 <body link="white">
-  <p align="center" ><img src="logo.jpg" align="middle" vspace="40"  ></p>
-  <p align="center" > <a href="classic.html"> <i>Классический состав</i></a></p>
+  <p align="center" ><img src="logo.jpg" vspace="40"  ></p>
+  <p align="center"color="white" > <a href="classic.html"> <i>Классический состав</i></a></p>
 </body>
 </html>
