add images to last

--- a/last.html
+++ b/last.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Первый состав группы Guns N’ Roses</title>
+	<title>Настоящий состав группы Guns N’ Roses</title>
 	<meta charset="utf-8">
 	<style>
 		body {
@@ -11,7 +11,8 @@
 	</style>
 	</head>
 <body>
-	<p> 
+	<p> <img src="RichardFortus.jpg" alt="фото Ричард Фортус" 
+	hspace="5" vspace="7" align="left" width="330" height="450">
 	Ричард Фортус (англ. Richard Fortus, род. 17 ноября 1966) — профессиональный гитарист, который получил признание <br/>
 	как один из гитаристов Guns N’ Roses. Он также играл в разных группах и как сессионный музыкант, и как участник<br/>
 	этих групп, последней из которых является Thin Lizzy. Родом из Сент-Луиса штата Миссури, Фортус начинал<br/>
@@ -21,21 +22,24 @@
 	которую назвали Paisley Piper Fortus.</p>
 	<br clear="both"/> 
 	
-	<p>
+	<p><img src="DJAshba.jpg" alt="фото Дарен Джей Ашба" 
+	hspace="5" vspace="7" align="left" width="330" height="450">
 	Дарен Джей Ашба, более известный как Диджей Ашба — американский гитарист, композитор, веб-дизайнер, саунд-продюсер.<br/>
 	На данный момент является гитаристом групп Sixx:A.M. и Guns N' Roses, также известен по работе<br/>
 	с такими хард-рок командами как BulletBoys, Beautiful Creatures и сольным проектом «Ashba».<br/>
 	Также участвовал в записи с Mötley Crüe, Drowning Pool, Marion Raven и Aimee Allen.</p> 
 	<br clear="both"/>
 	
-	<p>
+	<p><img src="DizzyReed.jpg" alt="фото Диззи Рид" 
+	hspace="5" vspace="7" align="left" width="330" height="450">
 	Диззи Рид, (англ. Dizzy Reed, настоящее имя Даррен Артур Рид, англ. Darren Arthur Reed; 18 июня 1963, Хинсдейл)<br/>
 	— американский рок-музыкант, наиболее известен как клавишник группы Guns N' Roses, в которой он играет<br/>
 	и гастролирует с 1990 года. Помимо фронтмена Эксла Роуза, Рид является единственным членом Guns N' Roses<br/>
 	оставшимся в составе группы, со времен эры Use Your Illusion.</p>
 	<br clear="both"/>
 	
-	<p>
+	<p><img src="ChrisPitman.jpg" alt="фото Крис Питман" 
+	hspace="5" vspace="7" align="left" width="280" height="370">
 	Крис Питман (Chris Pitman) родился 16 ноября 1961 года, -  американский музыкант, наиболее известный<br/>
 	как член Guns N' Roses. Питман – мульти инструменталист, он играет на клавишных, гитаре и ударных,<br/>
 	а также иногда исполняет на бэк-вокале. Кроме участния в Guns N' Roses, Питман является фронтменом проекта SexTapes,<br/>
@@ -43,7 +47,8 @@
 	В 1993 году Питман работал со скандальным Les Levine, а в следующем году -  с Dr. Dre в его домашней студии.</p>
 	<br clear="both"/>
 	
-	<p>
+	<p><img src="TommyStinson.jpg" alt="фото Томми Стинсон" 
+	hspace="5" vspace="7" align="left" >
 	Томми Стинсон (Tommy Stinson), один из основателей культовой группы THE REPLACEMENTS из Миннеаполиса<br/>
 	и нынешний басист GUNS N' ROSES, выпустит второй сольный альбом "One Man Mutiny" на собственном лейбле Done To Death Music 30 августа.<br/>
 	"One Man Mutiny" – это самая законченная работа Стинсона как в плане саунда, так и в плане написания песен.<br/>
