--- a/classic.html
+++ b/classic.html
@@ -17,7 +17,7 @@
   <p align="center"color="white" > <a href="http://ru.wikipedia.org/wiki/%D0%98%D0%B7%D0%B7%D0%B8_%D0%A1%D1%82%D1%80%D1%8D%D0%B4%D0%BB%D0%B8%D0%BD"> Izzy Stradlin</a></p>
   <p align="center" ><img src="duff.jpg"  ></p>
   <p align="center"color="white" > <a href="http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BA%D0%BA%D0%B0%D0%B3%D0%B0%D0%BD,_%D0%94%D0%B0%D1%84%D1%84"> Duff McKagan</a></p>
-  <p align="center" ><img src="Steven Adler.jpg"  ></p>
+  <p align="center" ><img src="Adler.jpg"  ></p>
   <p align="center"color="white" > <a href="http://ru.wikipedia.org/wiki/%D0%A1%D1%82%D0%B8%D0%B2%D0%B5%D0%BD_%D0%90%D0%B4%D0%BB%D0%B5%D1%80"> Steven Adler</a></p>
 
 
