Added herfs First and Last to Site

--- a/Site.html
+++ b/Site.html
@@ -9,6 +9,13 @@
 </head>
 <body link="white">
   <p align="center" ><img src="logo.jpg" vspace="40"  ></p>
+  <p align="center"color="white" > <a href="first.html"> <i>Первоначальный состав</i></a></p>
+
+
   <p align="center"color="white" > <a href="classic.html"> <i>Классический состав</i></a></p>
+
+
+  <p align="center"color="white" > <a href="last.html"> <i>Настоящий состав</i></a></p>
+
 </body>
 </html>
